--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
