--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
+    "@reduxjs/toolkit": "^1.8.6",
+    "firebase": "^9.12.1",
     "next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-redux": "^8.0.4",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
