--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.12",
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.2.1",
     "babel-jest": "^29.3.1",
     "firebase": "^9.12.1",
     "identity-obj-proxy": "^3.0.0",
@@ -27,7 +28,8 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-redux": "^8.0.4",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
@@ -54,5 +56,4 @@
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
-
 }
