--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.12",
     "@reduxjs/toolkit": "^1.8.6",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "axios": "^1.2.1",
     "babel-jest": "^29.3.1",
     "firebase": "^9.12.1",
