--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "next lint",
     "prettier": "prettier --write .",
     "test": "jest",
-    "clear_jest": "jest --clearCache"
+    "clear_jest": "jest --clearCache",
+    "dev:static": "serve ./out",
+    "export":"next build && next export"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
@@ -53,6 +55,7 @@
     "jest-transform-stub": "^2.0.0",
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
+    "serve": "^14.1.2",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
