--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "lint": "next lint",
     "prettier": "prettier --write .",
     "test": "jest",
-    "clear_jest": "jest --clearCache",
-    "dev:static": "serve ./out",
-    "export":"next build && next export"
+    "clear_jest": "jest --clearCache"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
