--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "identity-obj-proxy": "^3.0.0",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
