--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "serve": "^14.1.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.1.8",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
