--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.31.3",
     "swr": "^1.3.0"
   },
   "devDependencies": {
